result.txt
  File "C:\Users\ïŋ―ïŋ―ïŋ―ïŋ―ïŋ―ïŋ―\Desktop\ïŋ―Ðŧïŋ―ïŋ―ïŋ―Ö·ïŋ―Įžïŋ―\apply_images.py", line 114
    content = content[:m.start(1)] + f'"{city}": [{block}]{content[m.end(1):}']
                                                                            ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['
